# phitodo-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  error.rs  main.rs
src/db/: mod.rs  repository.rs  schema.rs
src/events/: handler.rs
src/models/: mod.rs  project.rs  tag.rs  task.rs
src/services/: filter_service.rs  github_service.rs  mod.rs  task_service.rs  toggl_service.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: github_column.rs  help.rs  input.rs  mod.rs  modal.rs  sidebar.rs  status_bar.rs  task_detail.rs  task_form.rs  task_list.rs  toggl_chart.rs
src/ui/views/: anytime.rs  completed.rs  github.rs  inbox.rs  mod.rs  project.rs  review.rs  settings.rs  tag.rs  today.rs  toggl.rs  upcoming.rs
