[package]
name = "phitodo-tui"
version = "0.1.0"
edition = "2021"
authors = ["Seb"]
description = "A terminal UI for phitodo task management"
license = "MIT"
rust-version = "1.74"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async
tokio = { version = "1.36", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP - use older version with compatible dependencies
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
url = "=2.4.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"

# Date/Time
chrono = { version = "0.4.26", default-features = false, features = ["serde", "std", "clock"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
base64 = "0.21"

# Pin older versions for rust 1.74 compat
indexmap = "=2.1.0"

[profile.release]
lto = true
strip = true
